# rlib

./: .hgignore  Cargo.toml  deny.toml  readme  readme.org  rustfmt.toml
.cargo/: config.toml
alch/: Cargo.toml
alch/src/: lib.rs  tr.rs
app/email/: Cargo.toml
app/email/src/: lib.rs
app/org/: Cargo.toml  Cargo.toml.orig
app/org/src/: lib.rs
app/shed/: Cargo.toml
app/shed/src/: app.rs  lib.rs
app/weather/: Cargo.toml
app/weather/src/: lib.rs
audio/: Cargo.toml
audio/dsp/: Cargo.toml
audio/src/: lib.rs
cfg/: Cargo.toml
cfg/src/: config.rs  err.rs  lib.rs  tests.rs
cfg/src/config/: database.rs  display.rs  lab.rs  library.rs  network.rs  package.rs  program.rs  registry.rs  repo.rs  shed.rs  stash.rs  store.rs  system.rs  user.rs
cli/: Cargo.toml
cli/src/: app.rs  ctl.rs  err.rs  lib.rs  tests.rs
cli/src/app/: cmd.rs  demo.rs  lab.rs  repl.rs  shed.rs  stash.rs
cli/src/ctl/: pass.rs  shell.rs
crypto/: Cargo.toml
crypto/src/: con.rs  lib.rs  tests.rs
ctx/: Cargo.toml
ctx/init-tokio/: Cargo.toml  lib.rs
ctx/macros/: Cargo.toml  expand.rs  lib.rs
ctx/src/: err.rs  init.rs  lib.rs
ctx/tests/: ctx-init.rs
db/: Cargo.toml
db/src/: backup.rs  blob.rs  cache.rs  comp.rs  err.rs  lib.rs  meter.rs  registry.rs  tests.rs
db/tests/: rocksdb.rs
dmc/: Cargo.toml  calc.rs
dmc/organ/: Cargo.toml
dmc/organ/src/: grammar.lalrpop
dmc/src/: lib.rs
dsl/: Cargo.toml
dsl/dmc/: Cargo.toml
dsl/dmc/src/: lib.rs
dts/: Cargo.toml
dts/src/: lib.rs
eve/: Cargo.toml
eve/src/: cbuff.rs  config.rs  lib.rs  uring.rs
eve/tests/: linux.rs
flate/: Cargo.toml
flate/src/: lib.rs
fu/: Cargo.toml
fu/src/: lib.rs  m.rs
gui/: Cargo.toml
hash/: Cargo.toml
hash/src/: lib.rs  tree.rs
kala/: Cargo.toml
kala/src/: #ctl.rs#  cmd.rs  ctl.rs  dmc.rs  err.rs  lib.rs  python.rs  repl.rs  shell.rs  tests.rs  tmux.rs
kala/src/cmd/: cargo.rs  hg.rs  input.rs  midi.rs  pass.rs  repl.rs  shell.rs  sys.rs  tmux.rs  usb.rs  x.rs
kala/tests/: darwin.rs  linux-desktop.rs  linux-server.rs  musl.rs  windows.rs
logger/: Cargo.toml
logger/src/: err.rs  lib.rs  tests.rs
math/: Cargo.toml
math/src/: lib.rs
net/: Cargo.toml
net/src/: client.rs  codec.rs  coding.rs  connection.rs  engine.rs  err.rs  lib.rs  server.rs  shared.rs  tests.rs  transport.rs  udp.rs
net/src/api/: client.rs
net/src/api/client/: ipapi.rs  nws.rs
net/src/codec/: #dm.rs#  .#dm.rs  dm.rs  packet.rs
net/src/codec/dm/: build.rs
net/src/engine/: dns.rs  http.rs  quic.rs  ssh.rs  uds.rs  ws.rs
net/src/engine/dns/: client.rs  resolver.rs
net/src/engine/http/: fs.rs  oauth.rs
organ/: build.rs
organ/src/: lib.rs
src/: lib.rs
sys/: Cargo.toml
sys/alc/: Cargo.toml
sys/audio/: Cargo.toml
sys/audio/src/: lib.rs
sys/crypto/: Cargo.toml
sys/crypto/src/: lib.rs  tests.rs
sys/eve/: Cargo.toml
sys/eve/src/: config.rs  lib.rs  uring.rs
sys/flate/: Cargo.toml
sys/flate/src/: lib.rs
sys/hash/: Cargo.toml
sys/hash/src/: id.rs  lib.rs  tests.rs
sys/logger/: Cargo.toml
sys/logger/src/: err.rs  lib.rs  tests.rs
sys/src/: lib.rs
tests/: ctx.rs  linux.rs
ui/: Cargo.toml
ui/gui/: Cargo.toml
ui/gui/src/: lib.rs  main.rs
ui/gui/tests/assets/: theme.ron
ui/src/: lib.rs
ui/tests/assets/: theme.ron
ui/web/: Cargo.toml  demon.html  index.scss  trunk.html  web.wasm
ui/web/src/: main.rs
util/: Cargo.toml
util/src/: bs.rs  cli.rs  cons.rs  fmt.rs  lib.rs  path.rs  tests.rs  time.rs
util/src/bs/: git.rs  version.rs
web/: index.js  web.html
