[package]
name = "rlib"
version = "0.1.0"
authors = ["ellis"]
edition = "2018"
description = "System Programming Library"
documentation = "https://docs.rwest.io/rlib"
repository = "https://hg.rwest.io/rlib"
publish = ["crater"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["ctx", "logger"]
full = ["ctx", "obj/full", "kala/full", "net/full", "flate", "util/full", "hash", "crypto", "logger", "db"]
cli = ["util/cli"]
vc = ["hg", "git"]
hg = ["kala/hg", "obj/hg"]
git = ["obj/git"]
org = ["obj/org"]
bs = ["util/bs"]
anyhow = ["util/anyhow"]
flate2 = ["flate/flate2"]
tls = ["net/tls"]
oauth = ["obj/oauth"]
python = ["kala/python", "kala/input"]
dmc = ["kala/dmc", "kala/input"]
midi = ["kala/midi"]
sys = ["kala/sys"]
tmux = ["kala/tmux"]
[dependencies]
obj = { version = "0.1.0", path = "obj", optional = true }
kala = { version = "0.1.0", path = "kala", optional = true }
ctx = { version = "0.1.0", path = "ctx", optional = true }
net = { version = "0.1.0", path = "net", optional = true }
db = { version = "0.1.0", path = "db", optional = true }
flate = { version = "0.1.0", path = "flate", optional = true }
hash = { version = "0.1.0", path = "hash", optional = true }
crypto = { version = "0.1.0", path = "crypto", optional = true }
logger = { version = "0.1.0", path = "logger", optional = true }
util = { version = "0.1.0", path = "util", optional = true }

[workspace]
resolver = "2"
members = [
  "dts",
  "ui",
  "kala",
  "ctx",
  "db",
  "dts",
  "math",
  "net",
  "obj",
  "crypto",
  "hash",
  "flate",
  "eve",
  "audio",
  "alch",
  "logger",
  "util",
  "organ",
  "fu",
]
