[package]
name = "ctx"
version = "0.1.0"
authors = ["ellis"]
edition = "2018"
description = "Async Runtime Modules"
documentation = "https://docs.rwest.io/ctx"
repository = "https://hg.rwest.io/rlib"
publish = ["crater"]

[lib]
test = false
doctest = false

[[test]]
name = "ctx-test"
path = "tests/ctx-init.rs"

[dependencies]
macros = { version = "0.1.0", path = "macros" }
quickcheck = "1"
init-tokio = { path = "init-tokio" }
tokio = { version = "1.10.0", features = ["full"] }
rayon = "1.5.1"
