[package]
name = "db"
version = "0.1.0"
authors = ["ellis"]
edition = "2018"
description = "Database System Modules"
documentation = "https://docs.rwest.io/db"
repository = "https://hg.rwest.io/rlib"
publish = ["crater"]

[dependencies.rocksdb]
version = "0.17.0"
default-features = false
features = ["zstd"]

[dev-dependencies]
tempfile = "3.2.0"
