[package]
name = "dmc"
version = "0.1.0"
authors = ["ellis"]
edition = "2018"
description = "DSL Builder Modules"
documentation = "https://docs.rwest.io/dmc"
repository = "https://hg.rwest.io/rlib"
publish = ["crater"]

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
lalrpop-util = "0.19.6"
regex = "1.5.4"
