[package]
name = "eve"
version = "0.1.0"
authors = ["ellis"]
edition = "2018"
description = "Event Queue Modules"
documentation = "https://docs.rwest.io/eve"
repository = "https://hg.rwest.io/rlib"
publish = ["crater"]

[target.'cfg(unix)'.dependencies]
io-uring = "0.5.2"

[dev-dependencies]
libc = "0.2.99"
slab = "0.4.4"
