[package]
name = "flate"
version = "0.1.0"
authors = ["ellis"]
edition = "2018"
description = "Archive and Compression Modules"
documentation = "https://docs.rwest.io/flate"
repository = "https://hg.rwest.io/rlib"
publish = ["crater"]

[features]
async = ["ctx"]
[dependencies]
tar = "0.4.36"
zstd = { version = "0.9.0", default-features = false }
ctx = { version = "0.1.0", path = "../ctx", optional = true }
zip = { version = "0.5", default-features = false, features = ["deflate"] }
flate2 = {version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3.2"