[package]
name = "kala"
version = "0.1.0"
edition = "2018"
description = "Shell commands, wrappers and utilities"

[dependencies]
# internal
cfg = { path = "../cfg" }
net = { path = "../net" }
ctx = { path = "../ctx" }
obj = { path = "../obj" }
hash = { path = "../hash" }
flate = { path = "../flate" }
logger = { path = "../logger" }
# contrib
whoami = { version = "1.1.3" }
rusb = { version = "0.8.1" }
chrono = { version = "0.4.19", features = ["serde"] }
cmd_lib = "1.1.0"
ron = "0.6.4"
rustyline = "8.2.0"
rpassword = "5.0.1"
tmux_interface = { version = "0.2.1", features = ["tmux_X_X"] }
blake3 = "1.0.0"
serde = "1.0.127"
hex = "0.4.3"
hashbrown = "0.11.2"
rand = "0.8.4"
sha2 = "0.9.5"
midir = "0.7.0"

[target.'cfg(all(target_os="linux", target_env="gnu"))'.dependencies]
xrandr = { version = "0.1.0" } # x11 doesn't compile on musl as of 20210817
