[package]
name = "kala"
version = "0.1.0"
authors = ["ellis"]
edition = "2018"
description = "Desktop Command Modules"
documentation = "https://docs.rwest.io/kala"
repository = "https://hg.rwest.io/rlib"
publish = ["crater"]

[features]
default = []
full = ["input", "tmux", "sys", "x11", "midi"]
input = ["rpassword", "rustyline"]
midi = ["midir"]
sys = ["rusb", "whoami"]
x11 = ["xrandr"]
tmux = ["tmux_interface"]
hg = ["obj/hg"]
#py = ["rustpython-vm"]
[dependencies]
# rlib
ctx = { path = "../ctx" }
obj = { path = "../obj" }
flate = { path = "../flate" }
logger = { path = "../logger" }
# contrib
cmd_lib = "1.1.0"
whoami = { version = "1.1.3", optional = true }
rusb = { version = "0.8.1", optional = true }
midir = { version = "0.7.0", optional = true }
rpassword = { version = "5.0.1", optional = true }
rustyline = { version = "9.0.0", optional = true }
[target.'cfg(all(target_os="linux", target_env="gnu"))'.dependencies]
xrandr = { version = "0.1.0", optional = true } # x11 doesn't compile on musl or darwin as of 20210817
tmux_interface = { version = "0.2.1", features = ["tmux_X_X"], optional = true } # uses tmux master branch. Only supports Linux