[package]
name = "kala"
version = "0.1.0"
authors = ["ellis"]
edition = "2021"
description = "System Commands"
documentation = "https://docs.rwest.io/kala"
repository = "https://hg.rwest.io/rlib"
publish = ["crater"]

[features]
default = []
full = ["input", "tmux", "sys", "x11", "midi"]
input = ["rpassword", "rustyline"]
midi = ["midir"]
sys = ["rusb", "whoami"]
x11 = ["xrandr"]
tmux = ["tmux_interface"]
hg = ["obj/hg"]
python = ["rustpython-vm", "rustpython-parser", "rustpython-compiler", "pylib", "num-traits", "rustyline"]
dmc = ["rustyline"]

[dependencies]
# rlib
obj = { path = "../obj" }
flate = { path = "../flate" }
logger = { path = "../logger" }
util = { path = "../util", features = ["cli"] }
# contrib
tokio = {version = "1.12.0", features = ["process"]}
#sys
whoami = { version = "1.1.3", optional = true }
rusb = { version = "0.8.1", optional = true }
#midi
midir = { version = "0.7.0", optional = true }
#input
rpassword = { version = "5.0.1", optional = true }
rustyline = { version = "9.0.0", optional = true }
crossterm = { version = "0.17", features = ["event-stream"] }
rustyline-derive = { version = "0.5" }
paste = "1.0"
#python
rustpython-vm = { version = "0.1.1", git = "https://github.com/RustPython/RustPython", features = ["ssl", "zlib"], rev = "fb4581bd453b45a23df71f6ec81e9c01e3e9b821", optional = true}
rustpython-parser = { version = "0.1.1", git = "https://github.com/RustPython/RustPython", rev = "fb4581bd453b45a23df71f6ec81e9c01e3e9b821", optional = true}
rustpython-compiler = { version = "0.1.1", git = "https://github.com/RustPython/RustPython", rev = "fb4581bd453b45a23df71f6ec81e9c01e3e9b821", optional = true}
pylib = { version = "0.1.0", git = "https://github.com/RustPython/RustPython", package="rustpython-pylib", rev = "fb4581bd453b45a23df71f6ec81e9c01e3e9b821", optional = true}
num-traits = { version = "0.2", optional = true}

## GNU/Linux
[target.'cfg(all(target_os="linux", target_env="gnu"))'.dependencies]
xrandr = { version = "0.1.0", optional = true } # x11 doesn't compile on musl or darwin as of 20210817
tmux_interface = { version = "0.2.1", features = ["tmux_X_X"], optional = true } # uses tmux master branch. Only supports Linux