[package]
name = "net"
version = "0.1.0"
authors = ["ellis"]
edition = "2018"
description = "Network Client/Server Modules"
documentation = "https://docs.rwest.io/kala"
repository = "https://hg.rwest.io/rlib"
publish = ["crater"]

[features]
default = ["client", "server"]
full = ["client", "server", "quic", "http"]
client = ["reqwest", "async-trait"]
server = ["hyper", "async-trait", "axum", "tower-http"]
quic = ["quinn"]
dns = ["trust-dns-resolver"]
[dependencies]
# rlib
obj = { path = "../obj", features = ["config"] }
# contrib
futures = "0.3.16"
bytes = "1.0.1"
logger = { path = "../logger" }
url = "2.2.2"
serde_json = "1.0.66"
tokio-util = { version = "0.6.7", features = ["full"] }
async-trait = { version = "0.1.51", optional = true }
tokio = { version = "1.10.0", default-features = false, features = ["net", "io-util"] }
tokio-stream = { version = "0.1.7", features = ["net"] }
## runtimes
quinn = { version = "0.7.2", features = ["tls-rustls"], optional = true }
hyper = { version = "0.14.11", optional = true }
http = { version = "0.2.4", optional = true }
reqwest = { version = "0.11.4", features = ["json", "socks", "rustls-tls"], optional = true }
axum = { version = "0.2.4", optional = true }
tower-http = { version = "0.1", features = ["fs", "trace"], optional = true }
trust-dns-resolver = { version = "0.20.3", features = [], optional = true }
ipnetwork = "0.18.0"
[dev-dependencies]
ctx = { path = "../ctx" } # use [ctx::test] for free integration testing
