[package]
name = "ui"
version = "0.1.0"
authors = ["ellis"]
edition = "2018"
description = "UI Component Modules"
documentation = "https://docs.rwest.io/ui"
repository = "https://hg.rwest.io/rlib"
publish = ["crater"]

[dependencies]
# rlib
obj = { path = "../obj" }
kala = { path = "../kala" }
net = { path = "../net" }
# contrib
druid = "0.7.0"
