[package]
name = "util"
version = "0.1.0"
edition = "2018"

[features]
default = []
full = ["time", "cli", "fmt"]
time = ["chrono"]
cli = ["clap", "anyhow"]
fmt = ["text_trees"]

[dependencies]
# contrib
clap = { version = "3.0.0-beta.2", optional = true }
chrono = { version = "0.4.19", features = ["serde"] , optional = true}
anyhow = { version = "1.0.42", optional = true }
text_trees = { version = "0.1.2", optional = true }