[package]
name = "util"
version = "0.1.0"
authors = ["ellis"]
edition = "2018"
description = "Rlib Utilities"
documentation = "https://docs.rwest.io/util"
repository = "https://hg.rwest.io/rlib"
publish = ["crater"]

[features]
default = []
full = ["time", "cli", "fmt"]
time = ["chrono"]
cli = ["clap", "anyhow"]
fmt = ["text_trees"]

[dependencies]
# contrib
clap = { version = "3.0.0-beta.2", optional = true }
chrono = { version = "0.4.19", features = ["serde"] , optional = true}
anyhow = { version = "1.0.42", optional = true }
text_trees = { version = "0.1.2", optional = true }
platforms = "1.1.0"
# serde = { version = "1.0.128", features = ["derive"], optional = true }