[package]
name = "util"
version = "0.1.0"
authors = ["ellis"]
edition = "2018"
description = "Rlib Utilities"
documentation = "https://docs.rwest.io/util"
repository = "https://hg.rwest.io/rlib"
publish = ["crater"]

[features]
default = []
full = ["time", "cli", "fmt", "bs"]
time = ["chrono"]
cli = ["clap", "anyhow", "terminal-clipboard", "indicatif"]
fmt = ["text_trees"]
bs = ["platforms"]
[dependencies]
# contrib
clap = { version = "3.0.0-beta.4", features = ["wrap_help"], optional = true }
chrono = { version = "0.4.19", features = ["serde"] , optional = true}
anyhow = { version = "1.0.42", optional = true }
text_trees = { version = "0.1.2", optional = true }
platforms = { version = "1.1.0", optional = true }
tempfile = { version = "3.2.0", optional = true }
terminal-clipboard = { version = "0.2.1", optional = true }
indicatif = { version = "0.16.2", optional = true }
# serde = { version = "1.0.128", features = ["derive"], optional = true }