[package]
name = "email"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = { path = "../../../../contrib/lib/rust/lettre", features = ["smtp-transport", "tokio1", "tokio1-rustls-tls", "builder"] }