[package]
name = "shed"
version = "0.1.0"
edition = "2018"
[dependencies]
# internal
kala = { path = "../../kala" }
ctx = { path = "../../ctx" }
cfg = { path = "../../cfg" }
db = { path = "../../db" }
net = { path = "../../net" }
util = { path = "../../util", features = ["anyhow"] }
serde = { version = "1.0.126", path = "../../../contrib/lib/rust/serde/serde", features = ["derive"] }
hash = { version = "0.1.0", path = "../../sys/hash" }
logger = { version = "0.1.0", path = "../../sys/logger" }

[dev-dependencies]
tempfile = { version = "3.2.0", path = "../../../contrib/lib/rust/tempfile" }