
[package]
name = "weather"
version = "0.1.0"
authors = ["ellis"]
edition = "2018"

[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
reqwest = { version = "0.11.4", features = ["json", "rustls-tls"] }
serde_json = "1.0.66"
serde = { version = "1.0.127", features = ["derive"] }
ron = "0.6.4"
chrono = { version = "0.4.19", features = ["serde"] }
