[package]
name = "macros"
version = "0.1.0"
edition = "2018"

[lib]
path = "lib.rs"
test = false
doctest = false
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits", "fold", "full", "visit", "visit-mut"] }
init-tokio = { path = "../init-tokio" }