[package]
name = "dmc"
version = "0.1.0"
edition = "2018"

[build-dependencies]
lalrpop = { version = "0.19.6", path = "../../../../contrib/lib/rust/lalrpop/lalrpop" }

[dependencies]
lalrpop-util = { version = "0.19.6", path = "../../../../contrib/lib/rust/lalrpop/lalrpop-util" }
regex = { version = "1.5.4", path = "../../../../contrib/lib/rust/regex" }
