[package]
name = "crypto"
version = "0.1.0"
edition = "2018"

[dependencies]
ed25519-dalek = { version = "1.0.1", path = "../../../../contrib/lib/rust/ed25519-dalek" }
rand_core = { version = "*", path = "../../../../contrib/lib/rust/rand/rand_core", features=["getrandom"] }
hash = { version = "*", path = "../hash" }
ed25519 = { version = "*", path = "../../../../contrib/lib/rust/signatures/ed25519" }
salsa20 = { version = "*", path = "../../../../contrib/lib/rust/stream-ciphers/salsa20", features = ["xsalsa20"] }
x25519-dalek = { version = "*", path = "../../../../contrib/lib/rust/x25519-dalek" }