[package]
name = "gui"
version = "0.1.0"
edition = "2018"

[dependencies]
# internal
cfg = { path = "../../cfg" }
kala = { path = "../../kala" }
net = { path = "../../net" }
org = { path = "../../app/org" }
sys = { path = "../../sys" }

# contrib
#chrono = { path = "../../../contrib/lib/rust/chrono", features = ["serde"] }
druid = { path = "../../../contrib/lib/rust/druid/druid" }